--- a/GlucoMan.Maui/FoodToHitTargetCarbsPage.xaml
+++ b/GlucoMan.Maui/FoodToHitTargetCarbsPage.xaml
@@ -4,8 +4,10 @@
              x:Class="GlucoMan.Maui.FoodToHitTargetCarbsPage"
              Title="Food to reach CHO">
     <ContentPage.Content>
-        <Grid RowDefinitions="60,0,50,60,20,60,60,60,50,60"
-              ColumnDefinitions="*,*,*">
+        <!--RowDefinitions="60,0,50,60,20,60,60,60,50,60"-->
+        <Grid RowDefinitions="Auto,0,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto"
+              ColumnDefinitions="*,*,*"
+              Margin="1">
             <Button Grid.Row="0" Grid.Column="1" x:Name="btnCalculateGrams" Text="Food Calc." 
                    ToolTipProperties.Text="Calculates the grams of chosen food you need to eat to reach the target carbohydrates"
                    IsEnabled="True"  Clicked="btnCalculateGrams_Click" />
@@ -32,19 +34,24 @@
             <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" 
                    Text="Food to eat to complete CHO budget" 
                    VerticalOptions="End" HorizontalTextAlignment="Center" 
-                   HorizontalOptions="End"/>
+                   HorizontalOptions="Center"/>
+            
             <Label Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" x:Name="TxtFoodName" Text=""
-                   FontAttributes="Bold" HorizontalTextAlignment ="End" FontSize="Medium"
+                   FontAttributes="Bold" FontSize="Medium"
+                   HorizontalTextAlignment ="Center" HorizontalOptions="Center" 
                    ToolTipProperties.Text="Selected food we have to eat to reach target carbohydrates"
-                   HorizontalOptions="End" BackgroundColor="White" />
+                   BackgroundColor="White" />
 
             <Button Grid.Row="6" Grid.Column="0" x:Name="btnReadTarget" Text="Read target&#10;CHO" 
+                    LineBreakMode="WordWrap" Margin="1"
                    ToolTipProperties.Text="Reads from meal page current total carbohydrates"
                    Clicked="btnReadTargetCho_Click" />
-            <Button Grid.Row="6" Grid.Column="1" x:Name="btnReadChoTaken" Text="Read taken&#10;CHO" 
+            <Button Grid.Row="6" Grid.Column="1" x:Name="btnReadChoTaken" Text="Read taken&#10;CHO"
+                   LineBreakMode="WordWrap" Margin="1"
                    ToolTipProperties.Text="Reads from meal page carbohydrates already eaten"
                    IsEnabled="True" Clicked="btnReadChoTaken_Click" />
             <Button Grid.Row="6" Grid.Column="2" x:Name="btnReadFood" Text="Read Food&#10;CHO" 
+                    LineBreakMode="WordWrap" Margin="1"
                    ToolTipProperties.Text="Reads from meal page the food that is selected"
                    IsEnabled="True" Clicked="btnReadFood_Click" />
             
@@ -54,19 +61,19 @@
 
             <Label Grid.Row="8" Grid.Column="0" Text="CHO left to take [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="9" Grid.Column="0" x:Name="TxtChoLeftToTake" Text="" Unfocused="TxtChoOfFood_Leave"
-                   Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End" 
+                   Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End" Margin="1"
                    ToolTipProperties.Text="Calculated carbohydrates to be eaten to reach the target"
                    VerticalOptions="Center"
                    BackgroundColor="SkyBlue"
                    FontSize="Large" />
 
-            <Button Grid.Row="9" Grid.Column="1"  Text="Injection" IsEnabled="True" 
+            <Button Grid.Row="9" Grid.Column="1"  Text="Injection" IsEnabled="True" Margin="1"
                    ToolTipProperties.Text="Opens the insulin injctions page"
                     x:Name="btnInjection" Clicked="btnInjection_Click" />
 
             <Label Grid.Row="8" Grid.Column="2" Text="Food to eat to hit target CHO [g]" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Entry Grid.Row="9" Grid.Column="2" x:Name="TxtFoodToHitTarget" Text="" 
+            <Entry Grid.Row="9" Grid.Column="2" x:Name="TxtFoodToHitTarget" Text="" Margin="1"
                    Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End"
                    ToolTipProperties.Text="Gram of chosen food to eat to reach the target carbohydrates"
                    VerticalOptions="Center" FontSize="Large" BackgroundColor="SkyBlue" />
