--- a/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
+++ b/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
@@ -17,12 +17,12 @@
             <Entry Grid.Row="1" Grid.Column="0" x:Name="txtGlucose" Text="" FontSize="Medium"
                    Keyboard="Numeric" HorizontalTextAlignment="End" BackgroundColor="Lime" 
                    ToolTipProperties.Text="Glucose measurement taken from the instrument" IsEnabled="true"/>
-            <DatePicker Grid.Row="1" Grid.Column="1" x:Name="dtpEventDate" Margin="3,0"
+            <DatePicker Grid.Row="1" Grid.Column="1" x:Name="dtpEventDate" Margin="1"
                         BackgroundColor="PaleGreen" 
                         HorizontalOptions="Center" VerticalOptions="Center"
                         ToolTipProperties.Text="Date of measurement of glucose"/>
             <TimePicker Grid.Row="1" Grid.Column="2" x:Name="dtpEventTime" BackgroundColor="PaleGreen" 
-                        HorizontalOptions="Center" VerticalOptions="Center"
+                        HorizontalOptions="Center" VerticalOptions="Center" Margin="1"
                         ToolTipProperties.Text="Time of measurement of glucose"/>
             <Label Grid.Row="1" Grid.Column="3" x:Name="txtIdGlucoseRecord" Text=""
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
@@ -32,15 +32,15 @@
                    HorizontalTextAlignment="Start" IsReadOnly="false"
                    ToolTipProperties.Text="Note about the measurement" />
 
-            <Button Grid.Row="3" Grid.Column="0" Text="Now" x:Name="btnNow" 
+            <Button Grid.Row="3" Grid.Column="0" Text="Now" x:Name="btnNow" Margin="1"
                     ToolTipProperties.Text="Sets the date and time at the current instant" 
                     Clicked="btnNow_Click"/>
-            <Button Grid.Row="3" Grid.Column="1" Text="+" x:Name="btnAddMeasurement" 
+            <Button Grid.Row="3" Grid.Column="1" Text="+" x:Name="btnAddMeasurement" Margin="1"
                     ToolTipProperties.Text="Adds a new measurement with the data taken from UI" 
                     Clicked="btnAddMeasurement_Click"/>
-            <Button Grid.Row="3" Grid.Column="2" Text="-" x:Name="btnRemoveMeasurement" 
+            <Button Grid.Row="3" Grid.Column="2" Text="-" x:Name="btnRemoveMeasurement" Margin="1"
                     ToolTipProperties.Text="Deletes the selected measurement" Clicked="btnRemoveMeasurement_Click"/>
-            <Button Grid.Row="3" Grid.Column="3" Text="Save" x:Name="btnSave" 
+            <Button Grid.Row="3" Grid.Column="3" Text="Save" x:Name="btnSave" Margin="1"
                     ToolTipProperties.Text="Saves the modifications made on current measurement" Clicked="btnSave_ClickAsync"/>
 
             <HorizontalStackLayout Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
