--- a/GlucoMan.Maui/HypoPredictionPage.xaml
+++ b/GlucoMan.Maui/HypoPredictionPage.xaml
@@ -4,19 +4,20 @@
              x:Class="GlucoMan.Maui.HypoPredictionPage"
              Title="Hypoglicemia time prediction">
     <ContentPage.Content>
-        <Grid RowDefinitions="55,55,20,20,70,70,50,20,50,20,50,50,20,50,40" 
-              ColumnDefinitions="80*,80*,80*,80*">
+        <!--RowDefinitions="55,55,20,20,70,70,50,20,50,20,50,50,20,50,40"-->
+        <Grid RowDefinitions="38,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,30,Auto,Auto,Auto" 
+              ColumnDefinitions="*,*,*,*">
 
-            <Button Grid.Row="0" Grid.Column="0" Text="Now"
+            <Button Grid.Row="0" Grid.Column="0" Text="Now" Margin="1"
                     ToolTipProperties.Text="Copies the current day and time to the date of the current glucose measurement"
                     Clicked="btnNow_Click"/>
-            <Button Grid.Row="0" Grid.Column="1" 
+            <Button Grid.Row="0" Grid.Column="1" Margin="1"
                     ToolTipProperties.Text="Moves the current glucose measurement into the previous and copies current time instant in latest glucose measurement"
                     Clicked="btnNext_Click" Text="Next"/>
-            <Button Grid.Row="0" Grid.Column="2" 
+            <Button Grid.Row="0" Grid.Column="2" Margin="1"
                     ToolTipProperties.Text="Reads the last two glucose measurements from the database"
                     Clicked="btnReadGlucose_Click" Text="Read g."/>
-            <Button Grid.Row="0" Grid.Column="3" 
+            <Button Grid.Row="0" Grid.Column="3" Margin="1"
                     ToolTipProperties.Text="Predicts the time at which the glucose will reach the value for alarm (prediction by linear extrapolation, applies only into VERY STRICT conditions))"
                     Clicked="btnPredict_Click" Text="Predict"/>
 
@@ -24,12 +25,13 @@
                     HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
             <Label Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="1" Text="Alarm advance time [min]" 
                     HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
-            <Entry Grid.Row="1" Grid.Column="0" x:Name="txtGlucoseTarget" Text="80" 
+            <Entry Grid.Row="1" Grid.Column="0" x:Name="txtGlucoseTarget" Text="80" FontSize="Medium"
                    ToolTipProperties.Text="Low glucose at which we want to take action against hypoglicemia"
                    Keyboard="Numeric" HorizontalTextAlignment="End" BackgroundColor="PaleGoldenrod"
                    IsEnabled="true"/>
             <Entry Grid.Row="1" Grid.Column="2" x:Name="txtAlarmAdvanceTime" Text="80" 
-                   ToolTipProperties.Text="Time of anticipated alarm, wit[min]"
+                   FontSize="Medium"
+                   ToolTipProperties.Text="Time of anticipated alarm [min]"
                    Keyboard="Numeric" HorizontalTextAlignment="End" BackgroundColor="DarkSeaGreen"
                    IsEnabled="true"/>
 
@@ -68,6 +70,7 @@
                    ToolTipProperties.Text="Rate of change of glucose (glucose units per hour)"
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" BackgroundColor="LightGray"/>
             <Label Grid.Row="6" Grid.Column="2" Text="Slope&#10;[gluc/h]" 
+                   LineBreakMode="WordWrap"
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
 
             <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4" 
@@ -93,21 +96,26 @@
             <Button Grid.Row="10" IsVisible="false" Grid.Column="3" 
                    Clicked="btnAlarm_Click" Text="Alarm"></Button>
 
-            <Label Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="3" 
+            <Label Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="4" Margin="1"
+                    x:Name="txtStatusBar" Text=""  FontSize="Small"
+                   BackgroundColor="red" TextColor="Yellow" 
+                   VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+            
+            <Label Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="3" Margin="1"
                    Text="Calculation of a future glucose value, starting from now" 
-                   HorizontalTextAlignment="End" VerticalTextAlignment="Center" />
-            <Button Grid.Row="11" Grid.Column="3" x:Name="btnCalcFutureGlucose" 
+                   HorizontalTextAlignment="Start" VerticalTextAlignment="Center" />
+            <Button Grid.Row="12" Grid.Column="3" x:Name="btnCalcFutureGlucose" Margin="1"
                     ToolTipProperties.Text="Calculates the future glucose after 'Time diff' minutes from 'current measurement' time (prediction uses the shown 'slope'). USE THIS WITH CAUTION!"
                     Clicked="btnCalcFutureGlucose_Click" Text="Calc."></Button>
 
-            <Label Grid.Row="12" Grid.Column="0" Text="Time diff.[min]" HorizontalTextAlignment="Center" />
-            <Label Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="2" Text="Future time" HorizontalTextAlignment="Center" />
-            <Label Grid.Row="12" Grid.Column="3" Text="Future gluc" HorizontalTextAlignment="Center" />
+            <Label Grid.Row="13" Grid.Column="0" Text="Time diff.[min]" HorizontalTextAlignment="Center" />
+            <Label Grid.Row="13" Grid.Column="1" Grid.ColumnSpan="2" Text="Future time" HorizontalTextAlignment="Center" />
+            <Label Grid.Row="13" Grid.Column="3" Text="Future gluc" HorizontalTextAlignment="Center" />
 
-            <Entry Grid.Row="13" Grid.Column="0" x:Name="txtFutureTimeMinutes" Placeholder="min" 
+            <Entry Grid.Row="14" Grid.Column="0" x:Name="txtFutureTimeMinutes" Placeholder="min" 
                    ToolTipProperties.Text="Difference in minutes for prediction. From current measurement time"
                    Keyboard="Numeric" HorizontalTextAlignment ="End" BackgroundColor="DarkSeaGreen" />
-            <HorizontalStackLayout Grid.Row="13" Grid.Column="1" Grid.ColumnSpan="2"
+            <HorizontalStackLayout Grid.Row="14" Grid.Column="1" Grid.ColumnSpan="2"
                    ToolTipProperties.Text="Hour and time of prediction">
                 <DatePicker  x:Name="dtpTimeFutureDate" BackgroundColor="White" TextColor="Black"
                         IsEnabled="False" HorizontalOptions="Center"/>
@@ -115,14 +123,9 @@
                         IsEnabled="False" HorizontalOptions="Center" />
             </HorizontalStackLayout>
 
-            <Entry Grid.Row="13" Grid.Column="3" x:Name="txtFutureGlucose" Placeholder="gluc" 
+            <Entry Grid.Row="15" Grid.Column="3" x:Name="txtFutureGlucose" Placeholder="gluc" 
                    ToolTipProperties.Text="Predicted glucose at 'future time' (USE WITH CAUTION!)"
                    Keyboard="Numeric" HorizontalTextAlignment ="End" BackgroundColor="SkyBlue" />
-
-            <Label Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="4"
-                    x:Name="txtStatusBar" Text="" 
-                   BackgroundColor="red" TextColor="Yellow" 
-                   VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
